--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 640px) {
+      flex-direction: column;
+
+      .header__cart {
+        margin-top: 20px;
+      }
+    }
   }
 
   &__logo {
@@ -27,6 +35,16 @@
 
     p {
       color: #7b7b7b;
+    }
+
+    @media (max-width: 640px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      div {
+        text-align: center;
+      }
     }
   }
 }
