--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 
     @media (max-width: 640px) {
       flex-direction: column;
